[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://LifeBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://BarsGUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://BarsGUI.gd" type="Script" id=7]
[ext_resource path="res://Apple.tscn" type="PackedScene" id=8]
[ext_resource path="res://Pineapple.tscn" type="PackedScene" id=9]
[ext_resource path="res://Melon.tscn" type="PackedScene" id=10]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=11]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )
Apple = ExtResource( 8 )
Pineapple = ExtResource( 9 )
Melon = ExtResource( 10 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="BarsGUI" parent="." instance=ExtResource( 6 )]
margin_left = 8.0
margin_top = 656.0
margin_right = 468.0
margin_bottom = 709.0
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="BarsGUI"]

[node name="Bars" type="VBoxContainer" parent="BarsGUI"]
margin_right = 460.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeBar" parent="BarsGUI/Bars" instance=ExtResource( 5 )]
margin_right = 460.0

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Tween" type="Tween" parent="Player"]

[node name="Player2" parent="." instance=ExtResource( 11 )]
visible = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ItemTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="StartPosition2" type="Position2D" parent="."]
position = Vector2( 240, 173 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
lookahead = 2.0

[node name="ItemPath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="ItemSpawnLocation" type="PathFollow2D" parent="ItemPath"]
lookahead = 2.0

[node name="Node" type="Node" parent="."]
[connection signal="multi_start" from="HUD" to="." method="_on_HUD_multi_start"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="start_game" from="HUD" to="BarsGUI" method="_on_HUD_start_game"]
[connection signal="died" from="Player" to="BarsGUI" method="_on_Player_died"]
[connection signal="health_changed" from="Player" to="BarsGUI" method="_on_Player_health_changed"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="melonHit" from="Player" to="." method="_on_Player_melonHit"]
[connection signal="pineappleHit" from="Player" to="." method="_on_Player_pineappleHit"]
[connection signal="body_entered" from="Player2" to="Player2" method="_on_Player2_body_entered"]
[connection signal="died" from="Player2" to="BarsGUI" method="_on_Player2_died"]
[connection signal="health_changed" from="Player2" to="BarsGUI" method="_on_Player2_health_changed"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ItemTimer" to="." method="_on_ItemTimer_timeout"]
